--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "ckeditor4-react": "4.3.0",
     "framer-motion": "^10.16.16",
     "multer": "^2.0.2",
     "next": "15.4.5",
