--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
