--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "ckeditor4-react": "4.3.0",
+    "cloudinary": "^2.7.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^10.16.16",
     "multer": "^2.0.2",
