--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ next-env.d.ts
 # uploads
 /public/uploads/*
 !/public/uploads/.gitkeep
+
+# Prisma
+/prisma/dev.db
+/prisma/dev.db-journal
+/prisma/migrations/
+*.db
+*.db-journal
